@@ -25,12 +25,14 @@ import java.util.LinkedList;
 import java.util.List;
 import java.util.concurrent.TimeUnit;
 
+import static snw.kookbc.util.VirtualThreadUtil.startVirtualThread;
+
 public class IgnoreSNListenerImpl extends ListenerImpl {
     private final List<Integer> processedSN = new LinkedList<>();
 
     public IgnoreSNListenerImpl(KBCClient client, Connector connector) {
         super(client, connector);
-        new Thread(() -> {
+        startVirtualThread(() -> {
             while (client.isRunning()) {
                 try {
                     //noinspection BusyWait
